@@ -1,3 +1,10 @@
+2000-01-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/parse.c (my_get_font):
+	(ParseContainer):
+	(ParseButton):
+	can now have fontname with spaces in buttons
+
 2000-01-18  Brad Giaccio  <bgiaccio@psrw.com>
 
 	* FvwmIconMan/readconfig.c (trim): added function to remove extra
